# papermc_plugin_manager

./: .gitignore  .ruff.sh  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  main.py  papermc_plugin_manager.yaml  ppm.db  pyproject.toml
src/papermc_plugin_manager/: __main__.py  config.py  connector_interface.py  console.py  database.py  exceptions.py  logging.py  plugin_manager.py  utils.py
src/papermc_plugin_manager/connectors/: modrinth.py  modrinth_models.py
tests/: __init__.py  test_connector_interface.py
