[project]
name = "papermc-plugin-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "requests>=2.32.5",
    "typer>=0.20.0",
]

[project.scripts]
ppm = "papermc_plugin_manager.__main__:main"
